# weed-detection

./: .gitignore  .gitmodules  CLAUDE.md  README.md  ROBOT_DEPLOYMENT.md  SESSION_HANDOFF.md  grab_camera_frame.py  real_sim.sh  run_demo.sh  usb_camera_node.py  weed_detection-2.py  weed_detection.py
docs/: architecture.md  calibration_log.md  weed_centering_control_loop.html  weed_centering_control_loop.md
docs/superpowers/plans/: 2026-06-19-real-hardware-launch.md  2026-06-23-ur5-gazebo-sim.md
scripts/: apply_calibration.py  check_camera_params.py  scan_servos.py  summarize_run.py
src/SO-ARM100-101-Parallel-Gripper/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/: .dockerignore  Dockerfile  docker-compose.yaml  package.xml  setup.cfg  setup.py
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/config/: controllers.yaml  display.rviz
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/docker/: constrain-window.sh  entrypoint.sh
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/launch/: display.launch.py  sim.launch.py
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/meshes/collision/: base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/meshes/visual/: base_link.stl  link1_1.stl  link2_1.stl  link3_1.stl  link4_1.stl
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/scripts/: generate_collision_meshes.py  publish_mujoco_description.py  setup_webots.py  validate_xml.py
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/test/: test_config.py  test_meshes.py  test_mujoco_load.py  test_urdf_structure.py
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/urdf/: materials.xacro  so_101.ros2_control.xacro  so_101.urdf.xacro
src/SO-ARM100-101-Parallel-Gripper/simulation/so_arm_101_description/worlds/: empty.sdf  webots_world.wbt
src/real_simulation_ur5/: package.xml  setup.cfg  setup.py
src/real_simulation_ur5/config/: camera_params.yaml  real_params.yaml  sim.rviz  sim_params.yaml  so101_feetech_joints.yaml
src/real_simulation_ur5/launch/: real.launch.py  sim.launch.py
src/real_simulation_ur5/real_simulation_ur5/: arm_controller_node.py  detection_node.py  joint_state_restamper.py  laser_effect_node.py  sim_arm_controller.py  sim_detection_node.py
src/real_simulation_ur5/test/: test_detection_logic.py  test_launch_loadable.py  test_state_machine.py
src/real_simulation_ur5/urdf/: ur5_with_d435.urdf.xacro
src/real_simulation_ur5/worlds/: simple_field.sdf
src/watermelon_demo/: arm_controller_state_machine.md  package.xml  pyproject.toml  setup.cfg  setup.py  test_yaml_compat.py
src/watermelon_demo/config/: camera_only.rviz  camera_params.yaml  demo_params.yaml  demo_rviz.rviz  real_params.yaml  ur5_camera_basic.rviz
src/watermelon_demo/launch/: demo.launch.py  demo_camera_only.launch.py  demo_real.launch.py  demo_ur5_camera.launch.py
src/watermelon_demo/test/: test_arm_real_hardware.py  test_camera_intrinsics.py  test_camera_tf.py  test_centering.py  test_check_camera_params_script.py  test_config.py  test_dry_run.py  test_dry_run_integration.py  test_launch.py  test_manual_calibration.py  test_nodes.py  test_package_structure.py  test_prerequisites.py  test_real_params.py  test_urdf.py  test_world_sdf.py  test_yaml_compat.py
src/watermelon_demo/urdf/: ur5_with_sensors.urdf.xacro
src/watermelon_demo/watermelon_demo/: arm_controller_node.py  detection_node.py  field_manager_node.py  laser_effect_node.py
src/watermelon_demo/worlds/: watermelon_field.sdf
(+25 files in other folders)
