[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "watermelon_demo"
version = "0.0.1"
description = "UR5 weed detection and laser burning simulation demo"
license = { text = "MIT" }
maintainers = [{ name = "lior", email = "liorieiz1@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["setuptools"]

[project.scripts]
detection_node = "watermelon_demo.detection_node:main"
arm_controller_node = "watermelon_demo.arm_controller_node:main"
laser_effect_node = "watermelon_demo.laser_effect_node:main"
field_manager_node = "watermelon_demo.field_manager_node:main"

[tool.setuptools.packages.find]
exclude = ["test*"]
