<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_101_description</name>
  <version>0.1.0</version>
  <description>ROS2 robot description package for the SO-ARM-101 robotic arm with parallel gripper. Supports multiple simulator backends (Gazebo, MuJoCo, Webots, CoppeliaSim, Isaac Sim) via parameterized ros2_control.</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>GPL-3.0-only</license>

  <!-- Core dependencies -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz2</depend>

  <!-- ros2_control -->
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <!-- Gazebo -->
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- MuJoCo -->
  <exec_depend>mujoco_ros2_control</exec_depend>

  <!-- Webots -->
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>

  <!-- CoppeliaSim / Isaac Sim (topic-based control) -->
  <exec_depend>topic_based_ros2_control</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
